--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Patrick Walton <pcwalton@mimiga.net>"]
 [dependencies]
 bitflags = "0.7"
 libc = "*"
+rand = "0.3"
 
 [dependencies.ui-sys]
 path = "../ui-sys"
